--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Should I wear a Native American costume</title>
+    <title>Should I wear a Native American costume?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       section {
@@ -16,6 +16,17 @@
       div {
         font-size: 50vw;
       }
+
+      footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      a {
+        margin-left: 4px;
+        margin-top: 4px;
+      }
     </style>
   </head>
   <body>
@@ -24,5 +35,15 @@
         <div>NO</div>
       </section>
     </main>
+    <footer>
+      Made with ❤️ by
+      <a
+        rel="noreferrer noopener"
+        target="_blank"
+        href="https://nativesintech.org"
+      >
+        Natives in Tech
+      </a>
+    </footer>
   </body>
 </html>
