Add SEO meta tags 🌍

--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Should I wear a Native American costume?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta
+      name="twitter:url"
+      content="https://shouldiwearanativeamericancostume.netlify.com/"
+    />
+    <meta
+      name="twitter:title"
+      content="Should I wear a Native American costume?"
+    />
+    <meta
+      name="twitter:description"
+      content="The definitive answer to the age old question 🤔"
+    />
+
+    <meta
+      property="og:title"
+      content="Should I wear a Native American costume?"
+    />
+    <meta
+      property="og:site_name"
+      content="Should I wear a Native American costume?"
+    />
+    <meta
+      property="og:description"
+      content="This definitive answer to the age old question 🤔"
+    />
+
     <style>
       section {
         display: flex;
