Get the SEO even better 🌍

--- a/index.html
+++ b/index.html
@@ -3,35 +3,48 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Should I wear a Native American costume?</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="twitter:card" content="summary" />
+    <!-- Primary Meta Tags -->
+    <title>Should I wear a Native American costume?</title>
+    <meta name="title" content="Should I wear a Native American costume?" />
     <meta
-      name="twitter:url"
-      content="https://shouldiwearanativeamericancostume.netlify.com/"
-    />
-    <meta
-      name="twitter:title"
-      content="Should I wear a Native American costume?"
-    />
-    <meta
-      name="twitter:description"
+      name="description"
       content="The definitive answer to the age old question 🤔"
     />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://shouldiwearanativeamericancostume.netlify.com/"
+    />
     <meta
       property="og:title"
       content="Should I wear a Native American costume?"
     />
     <meta
-      property="og:site_name"
+      property="og:description"
+      content="The definitive answer to the age old question 🤔"
+    />
+    <meta property="og:image" content="./thinking-face.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://shouldiwearanativeamericancostume.netlify.com/"
+    />
+    <meta
+      property="twitter:title"
       content="Should I wear a Native American costume?"
     />
     <meta
-      property="og:description"
-      content="This definitive answer to the age old question 🤔"
+      property="twitter:description"
+      content="The definitive answer to the age old question 🤔"
     />
+    <meta property="twitter:image" content="./thinking-face.png" />
 
     <style>
       section {
