--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       property="og:description"
       content="The definitive answer to the age old question 🤔"
     />
-    <meta property="og:image" content="./thinking-face.png" />
+    <meta property="og:image" content="/thinking-face.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -44,7 +44,7 @@
       property="twitter:description"
       content="The definitive answer to the age old question 🤔"
     />
-    <meta property="twitter:image" content="./thinking-face.png" />
+    <meta property="twitter:image" content="/thinking-face.png" />
 
     <style>
       section {
